# evm2

./: .gitattributes  .gitignore  AGENTS.md  ALLOY_EVM_PORT.md  Cargo.toml  INSPECTORS_DIVERGENCE_TODO.md  INSPECTORS_SOURCE_AUDIT.md  LOG.md  README.md  deny.toml  out.ll  typos.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/benches/: evm.rs
crates/cli/benches/evm/: cases.rs  fixture.rs  jit.rs  mainnet.rs  revm.rs  support.rs
crates/cli/fuzzer/: README.md
crates/cli/src/: args.rs  error.rs  ethereum.rs  evm_bench.rs  fixture.rs  lib.rs  list.rs  main.rs  run.rs  style.rs
crates/cli/src/capture/: block.rs  builder.rs  error.rs  export.rs  mod.rs  model.rs  overlay.rs  parse.rs  rpc.rs
crates/cli/src/fuzzer/: backend.rs  case.rs  cli.rs  coverage.rs  inspect.rs  io.rs  minimize.rs  mod.rs  normalize.rs  precompile.rs  program.rs  rng.rs
crates/cli/src/replay/: mod.rs
crates/eest/: Cargo.toml  README.md
crates/eest/benches/: evm.rs  mainnet.rs
crates/eest/benches/evm/: cases.rs  fixture.rs  mainnet.rs  revm.rs  support.rs
crates/eest/src/: additional.rs  binary.rs  compiled.rs  custom.rs  discover.rs  dump.rs  env.rs  error.rs  execute.rs  execution.rs  filter.rs  fixture_io.rs  fixtures.rs  forks.rs  harness.rs  jit.rs  lib.rs  runner.rs  state.rs  trace.rs  tx.rs  types.rs
crates/eest/src/blockchaintest/: env.rs  error.rs  execute.rs  hook.rs  mod.rs  runner.rs  types.rs
crates/eest/tests/: blockchaintest.rs  eest.rs  statetest.rs
crates/evm2/: Cargo.toml  README.md  build.rs
crates/evm2-macros/: Cargo.toml
crates/evm2-macros/src/: lib.rs
crates/evm2-precompiles/: Cargo.toml  README.md
crates/evm2-precompiles/src/: blake2.rs  bn128.rs  lib.rs  modexp.rs  secp256k1.rs
crates/evm2-statetest/: Cargo.toml  README.md
crates/evm2-statetest/src/: discover.rs  env.rs  error.rs  execute.rs  lib.rs  main.rs  runner.rs  skip.rs  types.rs
crates/evm2-statetest/tests/: statetest.rs
crates/evm2/benches/: evm.rs  gas_cost_estimator.rs
crates/evm2/benches/evm/: cases.rs  fixture.rs  revm.rs  support.rs
crates/evm2/docs/: state-output.md
crates/evm2/examples/: bal_build.rs  bal_parallel.rs  custom_evm.rs  e2e_transfer_sstore.rs  precompile_subcall.rs
crates/evm2/examples/custom_evm/: config.rs  main.rs  opcode.rs  tx.rs
crates/evm2/examples/registry/: custom_handler.rs  tx_handler.rs
crates/evm2/src/: async_.rs  config.rs  constants.rs  env.rs  error.rs  ethereum.rs  evm.rs  lib.rs  once_lock.rs  precompiles.rs  registry.rs  spec_id.rs  storage_key.rs  test_utils.rs  tests.rs  trustme.rs  utils.rs
crates/evm2/src/bytecode/: analysis.rs  jump_table.rs  mod.rs  serde_impl.rs
crates/evm2/src/ethereum/: eip1559.rs  eip2930.rs  eip4844.rs  eip7702.rs  lazy_eip7702.rs  legacy.rs  mod.rs  precompiles.rs  registry.rs
crates/evm2/src/evm/: any.rs  async.rs  bal.rs  block.rs  config.rs  db.rs  env.rs  inspector.rs  mod.rs  precompile.rs  prewarm_set.rs  registry.rs  state.rs  system.rs  transaction.rs  tx.rs  warm_addresses.rs
crates/evmc/: Cargo.toml  build.rs  regenerate-bindings.rs
crates/evmc/src/: ffi.rs  lib.rs
crates/evmc/tests/: dylib.rs
crates/fuzzer/: Cargo.toml  README.md
crates/fuzzer/src/: backend.rs  case.rs  cli.rs  coverage.rs  io.rs  main.rs  minimize.rs  normalize.rs  precompile.rs  program.rs  rng.rs
crates/inspectors/: Cargo.toml  PORT_REVIEW_TODO.md  README.md
crates/inspectors/src/: access_list.rs  edge_cov.rs  lib.rs  opcode.rs  storage.rs  transfer.rs
crates/jit/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/jit/backend/: CHANGELOG.md  Cargo.toml  README.md
crates/jit/builtins/: CHANGELOG.md  Cargo.toml  README.md
crates/jit/cli/: CHANGELOG.md  Cargo.toml  build.rs  tests.rs
crates/jit/cli-tests/: CHANGELOG.md  Cargo.toml
crates/jit/cli/src/: lib.rs  (+3 more)
crates/jit/codegen/: Cargo.toml  README.md  build.rs  tests.rs
crates/jit/context/: CHANGELOG.md  Cargo.toml  README.md
crates/jit/docs/: out-of-process-jit.md
crates/jit/fuzz/: Cargo.toml
crates/jit/llvm/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/jit/runtime/: Cargo.toml  README.md  build.rs
crates/jit/scripts/: bench.py  changelog.sh  utils.py
crates/jit/src/: lib.rs
crates/jit/statetest/: Cargo.toml  README.md
crates/precompiles/: Cargo.toml  README.md
crates/precompiles/bench/: blake2.rs  ecrecover.rs  eip1962.rs  eip2537.rs  eip4844.rs  main.rs  secp256r1.rs
crates/precompiles/src/: bls12_381.rs  bls12_381_const.rs  hash.rs  id.rs  identity.rs  interface.rs  lib.rs  modexp.rs  secp256r1.rs  utilities.rs  utils.rs
crates/replayer/: Cargo.toml  README.md
crates/replayer/src/: cli.rs  corpus.rs  error.rs  ethereum.rs  execute.rs  input.rs  main.rs  prepare.rs  report.rs  runner.rs
fuzz/: Cargo.toml  TRIAGE.md  build.rs  evm2-amsterdam-call-runtime-oog-inspector.patch  evm2-amsterdam-runtime-gas.patch  evm2-eip7702-code-address.patch  revm-amsterdam-selfdestruct-value.patch  revm-eip7708-inspector.patch  revm-selfdestruct-inspector-after-eip7708.patch  revm-selfdestruct-inspector.patch
fuzz/evm2-amsterdam-floor-decomposed-base-patches/: 0001-fix-ethereum-anchor-Amsterdam-floor-on-transaction-b.patch
fuzz/evm2-amsterdam-jit-create-preaccess-patches/: 0001-fix-evm-precheck-amsterdam-create-before-inspector-f.patch  0002-fix-jit-precheck-amsterdam-create-state-gas.patch
fuzz/fuzz_targets/: bytecode_compare.rs  bytecode_compare_amsterdam.rs  bytecode_compare_berlin.rs  bytecode_compare_byzantium.rs  bytecode_compare_cancun.rs  bytecode_compare_frontier.rs  bytecode_compare_homestead.rs  bytecode_compare_istanbul.rs  bytecode_compare_london.rs  bytecode_compare_merge.rs  bytecode_compare_osaka.rs  bytecode_compare_petersburg.rs  bytecode_compare_prague.rs  bytecode_compare_shanghai.rs  bytecode_compare_spurious_dragon.rs  bytecode_compare_tangerine.rs  bytecode_mutator.rs  common.rs  evm_smith_arbitrary_compare.rs  evm_smith_compare.rs  generated_compare.rs  jit_vs_interpreter.rs  lifecycle_compare.rs  precompile_case.rs  precompile_compare.rs  structured_compare.rs  validation_compare.rs
(+740 files in other folders)
