[workspace]
members = ["crates/evm2", "crates/evm2-macros", "crates/evm2-statetest", "crates/precompiles"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Dani Popescu <dani@popes.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/danipopes/evm2"
repository = "https://github.com/danipopes/evm2"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
missing-const-for-fn = "warn"

[workspace.lints.rust]
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
evm2 = { path = "crates/evm2" }
evm2-macros = { path = "crates/evm2-macros" }
evm2-precompiles = { path = "crates/precompiles", default-features = false }

alloy-consensus = { version = "2.0.4", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-trie = { version = "0.9", default-features = false }

ark-bls12-381 = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
aurora-engine-modexp = { version = "1.2", default-features = false }
aws-lc-rs = { version = "1.16.2", default-features = false, features = ["aws-lc-sys"] }
blst = "0.3.15"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
c-kzg = { version = "2.1.7", default-features = false }
cfg-if = { version = "1.0", default-features = false }
criterion = { package = "codspeed-criterion-compat", version = "=4.5.0" }
gmp-mpfr-sys = { version = "1.6", default-features = false }
k256 = { version = "0.13", default-features = false }
libtest-mimic = "0.8"
once_cell = { version = "1.21", default-features = false }
paste = "1.0"
p256 = { version = "0.13.2", default-features = false }
rand = "0.9"
ripemd = { version = "0.1.3", default-features = false }
rstest = "0.26.0"
secp256k1 = { version = "0.31.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
thiserror = { version = "2.0", default-features = false }
walkdir = { version = "2.5", default-features = false }

proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
# lto = "thin"
