[package]
name = "evm2-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { git = "https://github.com/0xalpharush/arbitrary", rev = "0524cf70fc9cb62e4c87972f872b9894e966f13c", features = ["derive"] }
evm2-fuzzer = { package = "evm2-cli", path = "../crates/cli" }
evm-smith = { git = "https://github.com/R9295/evm-smith.git", features = ["arbitrary", "rng"] }
fastrand = "2.4.1"
libfuzzer-sys = "0.4"
rand = "0.10"

[build-dependencies]
arbitrary = { git = "https://github.com/0xalpharush/arbitrary", rev = "0524cf70fc9cb62e4c87972f872b9894e966f13c", features = ["derive"] }

[features]
default = []
jit = ["evm2-fuzzer/jit"]

[workspace]
members = ["."]

[[bin]]
name = "bytecode_compare"
path = "fuzz_targets/bytecode_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_frontier"
path = "fuzz_targets/bytecode_compare_frontier.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_homestead"
path = "fuzz_targets/bytecode_compare_homestead.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_tangerine"
path = "fuzz_targets/bytecode_compare_tangerine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_spurious_dragon"
path = "fuzz_targets/bytecode_compare_spurious_dragon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_byzantium"
path = "fuzz_targets/bytecode_compare_byzantium.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_petersburg"
path = "fuzz_targets/bytecode_compare_petersburg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_istanbul"
path = "fuzz_targets/bytecode_compare_istanbul.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_berlin"
path = "fuzz_targets/bytecode_compare_berlin.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_london"
path = "fuzz_targets/bytecode_compare_london.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_merge"
path = "fuzz_targets/bytecode_compare_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_shanghai"
path = "fuzz_targets/bytecode_compare_shanghai.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_cancun"
path = "fuzz_targets/bytecode_compare_cancun.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_prague"
path = "fuzz_targets/bytecode_compare_prague.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_osaka"
path = "fuzz_targets/bytecode_compare_osaka.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_compare_amsterdam"
path = "fuzz_targets/bytecode_compare_amsterdam.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_frontier"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_homestead"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_tangerine"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_spurious_dragon"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_byzantium"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_petersburg"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_istanbul"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_berlin"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_london"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_merge"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_shanghai"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_cancun"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_prague"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_osaka"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_compare_amsterdam"
path = "fuzz_targets/structured_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_frontier"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_homestead"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_tangerine"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_spurious_dragon"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_byzantium"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_petersburg"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_istanbul"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_berlin"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_london"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_merge"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_shanghai"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_cancun"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_prague"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_osaka"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_compare_amsterdam"
path = "fuzz_targets/evm_smith_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_frontier"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_homestead"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_tangerine"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_spurious_dragon"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_byzantium"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_petersburg"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_istanbul"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_berlin"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_london"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_merge"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_shanghai"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_cancun"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_prague"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_osaka"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evm_smith_arbitrary_compare_amsterdam"
path = "fuzz_targets/evm_smith_arbitrary_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_frontier"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_homestead"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_tangerine"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_spurious_dragon"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_byzantium"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_petersburg"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_istanbul"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_berlin"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_london"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_merge"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_shanghai"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_cancun"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_prague"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_osaka"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "precompile_compare_amsterdam"
path = "fuzz_targets/precompile_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_frontier"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_homestead"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_tangerine"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_spurious_dragon"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_byzantium"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_petersburg"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_istanbul"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_berlin"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_london"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_merge"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_shanghai"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_cancun"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_prague"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_osaka"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lifecycle_compare_amsterdam"
path = "fuzz_targets/lifecycle_compare.rs"
test = false
doc = false
bench = false
