[package]
name = "evm2-eest"
description = "Ethereum Execution Spec Test nextest runners for evm2."
readme = "README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
evm2 = { workspace = true, features = ["std"] }
evm2-jit-runtime = { workspace = true, features = ["llvm"], optional = true }

alloy-consensus = { workspace = true, features = ["std"] }
alloy-eip7928 = { workspace = true, features = ["std", "serde", "rlp"] }
alloy-eips = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["std", "serde", "rlp"] }
alloy-rlp = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
alloy-trie = { workspace = true, features = ["ethereum"] }
k256 = { workspace = true, features = ["ecdsa", "std"] }
libtest-mimic.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["preserve_order", "std"] }
thiserror = { workspace = true, features = ["std"] }
walkdir.workspace = true

[build-dependencies]
evm2-jit-build.workspace = true

[[test]]
name = "eest"
path = "tests/eest.rs"
harness = false

[features]
default = []
jit = ["dep:evm2-jit-runtime"]
